# cmake-swig-java

cmake/: FindALE.cmake  FindCSharp.cmake  FindDotNetFrameworkSDK.cmake  FindLuabind.cmake  FindMono.cmake  FindXsd.cmake  UseCSharp.cmake  UseDotNetFrameworkSDK.cmake  UseMono.cmake
src/: CMakeLists.txt  example.c
src/languages/: example.i
src/languages/csharp/: CMakeLists.txt  main.cs
src/languages/java/: CMakeLists.txt  main.java
